# eml-converter

./: .gitignore  README.md  pyproject.toml
src/: eml_converter.py  file_operations.py  html_conversion.py
